--- a/common/config/azure-pipelines/jobs/docs-build.yaml
+++ b/common/config/azure-pipelines/jobs/docs-build.yaml
@@ -69,7 +69,7 @@ jobs:
           downloadCurrentBuildArtifacts: ${{ parameters.downloadCurrentBuildArtifacts }}
 
       # Currently BeMetalsmith is an internal only tool
-      - script: npm install @bentley/bemetalsmith@4.x
+      - script: npm install @bentley/bemetalsmith@4.3.x
         displayName: Install BeMetalsmith
         workingDirectory: ${{ parameters.workingDir }}
 
@@ -89,7 +89,7 @@ jobs:
         condition: and(succeeded(), eq('${{ parameters.shouldPublish }}', true))
 
       - powershell: |
-          $commitMsg = '$(Build.SourceVersionMessage)'
+          $commitMsg = "$(Build.SourceVersionMessage)"
           if ($commitMsg -match '^(\d+.\d+.\d+)(-dev.\d+)?$') {
             Write-Host `'$commitMsg`'` is a version bump
             Write-Host '##vso[build.addbuildtag]iTwinJsDocsRelease'
