--- a/tools/eslint-plugin/package.json
+++ b/tools/eslint-plugin/package.json
@@ -30,7 +30,7 @@
     "@typescript-eslint/eslint-plugin": "~4.31.0",
     "@typescript-eslint/parser": "~4.31.0",
     "eslint-import-resolver-node": "0.3.4",
-    "eslint-import-resolver-typescript": "2.4.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-deprecation": "1.2.1",
     "eslint-plugin-import": "2.23.4",
     "eslint-plugin-jam3": "0.2.3",
